attached_assets/Pasted--workspaces-ecommerce-app-lib-db-drizzle-config-ts-work_1783320946242.txt

- /workspaces/ecommerce-app/lib/db/drizzle.config.ts
- /workspaces/ecommerce-app/node_modules/.pnpm/drizzle-kit@0.31.10/node_modules/drizzle-kit/bin.cjs
/workspaces/ecommerce-app/lib/db:
 ERR_PNPM_RECURSIVE_RUN_FIRST_FAIL  @workspace/db@0.0.0 push: `drizzle-kit push --config ./drizzle.config.ts`
Exit status 1
@swetamerai ➜ /workspaces/ecommerce-app (main) $ git pull && pnpm install && pnpm --filter @workspace/db run push && ./start.sh
remote: Enumerating objects: 13, done.
remote: Counting objects: 100% (13/13), done.
remote: Compressing objects: 100% (3/3), done.
remote: Total 7 (delta 5), reused 6 (delta 4), pack-reused 0 (from 0)
Unpacking objects: 100% (7/7), 729 bytes | 145.00 KiB/s, done.
From https://github.com/swetamerai/ecommerce-app
   1ce15a0..12a85a2  main       -> origin/main
Updating 1ce15a0..12a85a2
Fast-forward
 lib/db/drizzle.config.ts | 4 ----
 lib/db/package.json      | 5 ++---
 pnpm-lock.yaml           | 9 ---------
 3 files changed, 2 insertions(+), 16 deletions(-)
Scope: all 10 workspace projects
Lockfile is up to date, resolution step is skipped
Already up to date
. preinstall$ sh -c 'rm -f package-lock.json yarn.lock; case "$npm_config_user_agent" in pnpm/*) ;; *) echo "Use pn…
└─ Done in 32ms
Done in 2.9s using pnpm v10.32.1

> @workspace/db@0.0.0 push /workspaces/ecommerce-app/lib/db
> node --env-file=../../.env ./node_modules/.bin/drizzle-kit push --config ./drizzle.config.ts

/workspaces/ecommerce-app/lib/db/node_modules/.bin/drizzle-kit:2
basedir=$(dirname "$(echo "$0" | sed -e 's,\\,/,g')")
          ^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at Module._compile (node:internal/modules/cjs/loader:1786:20)
    at Object..js (node:internal/modules/cjs/loader:1943:10)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.14.0
/workspaces/ecommerce-app/lib/db:
 ERR_PNPM_RECURSIVE_RUN_FIRST_FAIL  @workspace/db@0.0.0 push: `node --env-file=../../.env ./node_modules/.bin/drizzle-kit push --config ./drizzle.config.ts`
Exit status 1